--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "<projectname>/wsgi.py",
+      "src": "keplerglProject/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
@@ -23,7 +23,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "<projectname>/wsgi.py"
+      "dest": "keplerProject/wsgi.py"
     }
   ]
 }
