--- a/requirements.txt
+++ b/requirements.txt
@@ -107,7 +107,7 @@ python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.1
 pypiwin32==223
-pywinpty==2.0.12
+# pywinpty==2.0.12
 PyYAML==6.0.1
 pyzmq==25.1.2
 referencing==0.33.0
